fixing snow animation on mobile phones

--- a/sites/all/themes/at_krakkaruv/ruv_sass/components/_animation.scss
+++ b/sites/all/themes/at_krakkaruv/ruv_sass/components/_animation.scss
@@ -14,6 +14,7 @@
    -moz-animation: snow 20s linear infinite;
    -ms-animation: snow 20s linear infinite;
    animation: snow 20s linear infinite;
+   -webkit-transform: translateZ(0);
 }
 
 @keyframes snow {
